@@ -1,4 +1,5 @@
 Version 0.9.0   - xx March 2002
+  * Fix spurious warning with globals that start w/__
   * Add --changetypes option to warn when setting a variable to different types
   * Add --stringiter option to warn when iterating over a string
   * Add --input option to warn when using input()
